<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Foodella Driver</string>
    <string name="welcome">Welcome..</string>
    <string name="create_account_mobile_hint">Please enter your mobile number and password to log in Or create a new account if you don\'t have one</string>
    <string name="login">Login</string>
    <string name="add_password">Add Password</string>
    <string name="forget_password">Forget Password !</string>
    <string name="enter">Enter</string>
    <string name="join_us_now">Join us now</string>
    <string name="new_driver">New Driver</string>
    <string name="new_restaurant">New Restaurant</string>
    <string name="no_items">No Items</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="please_enter_the_activation_code_sent_to_the_mobile_number">Please enter the activation code sent to the mobile number</string>
    <string name="ok">OK</string>
    <string name="resend">Resend</string>
    <string name="please_enter_password">Please Enter Password ..</string>
    <string name="please_enter_name">Please Enter Name ..</string>
    <string name="please_enter_price">Please Enter Delivery Price ..</string>
    <string name="please_allowable_weight">Please Enter allowable weight ..</string>
    <string name="please_allowable_price">Please Enter price ..</string>
    <string name="please_allowable_over_weight">Please Enter over wight ..</string>
    <string name="please_allowable_price_weight">Please Enter weight price..</string>
    <string name="please_enter_id_number">Please Enter the ID number..</string>
    <string name="please_enter_email">Please Enter Email ..</string>
    <string name="please_enter_national">Please Enter Nationality ..</string>
    <string name="please_enter_Job">Please Enter Job ..</string>
    <string name="please_enter_date">Please Enter the Date ..</string>
    <string name="please_enter_6_digit_password">Please Enter at least 6 Digit password</string>
    <string name="please_enter_phone_number">Please Enter Phone Number ..</string>
    <string name="please_choose_the_application_language">Please choose the application language</string>
    <string name="arabic">Arabic</string>
    <string name="english_language">English Language</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start now</string>
    <string name="on_boarding_1">on_boarding_1 on_boarding_1 on_boarding_1 on_boarding_1 on_boarding_1</string>
    <string name="on_boarding_2">on_boarding_2 on_boarding_2 on_boarding_2 on_boarding_2 on_boarding_2</string>
    <string name="on_boarding_3">on_boarding_3 on_boarding_3 on_boarding_3 on_boarding_3 on_boarding_3</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="read_the_terms_and_conditions">I have read the terms and conditions and agree to the \n privacy policy</string>
    <string name="confirm_password">confirm password</string>
    <string name="select_country_code">Select Your Country Code</string>
    <string name="password_should_be_same">Password should be same</string>
    <string name="invalid_confirm_password">Please enter confirm password</string>
    <string name="please_accept_the_privacy_policy">Please accept the  privacy policy</string>
    <string name="seconds">00:40</string>
    <string name="select_the_cities_where_the_service_is_available">Select the cities where the service is available</string>
    <string name="services">Services</string>
    <string name="available_cities_to_rate_the_service">Available cities to rate the service</string>
    <string name="maximum_load_weight">Maximum load weight</string>
    <string name="price_per_kilometer">Price per kilometer</string>
    <string name="please_select_the_vehicle_shape">Please select the vehicle shape</string>
    <string name="bicycle">Bicycle</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_number">Vehicle number</string>
    <string name="manufacturing_year">Manufacturing Year</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="insurance_type">Insurance Type</string>
    <string name="save">Save</string>
    <string name="vehicle_license">Vehicle license</string>
    <string name="click_to_download_the_insurance_certificate">Click to download the insurance certificate</string>
    <string name="click_to_download_the_vehicle_image">Click to download the vehicle image</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="forgot_password">Forget Password</string>
    <string name="txt_firget_pass">Please enter your mobile number to retrieve the password</string>
    <string name="Profile_privite">Profile personly</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="birth_date">Date of Birth</string>
    <string name="Nationality">Nationality</string>
    <string name="City">City</string>
    <string name="job">Job</string>
    <string name="Email">Email</string>
    <string name="choose_photo">Choose how to upload the image</string>
    <string name="Gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="SellectCity">Choose your city</string>
    <string name="CountryNumber">National number or passport</string>
    <string name="PearsonImge">image ID card</string>
    <string name="Lisance_draive">Click to download the driver license</string>
    <string name="Name">Name</string>
    <string name="approval_request"> Request Approval</string>
    <string name="delevary_price">Please enter order  delivery price </string>
    <string name="acceptable">Ok</string>
    <string name="numberCar">Vehicle plate number</string>
    <string name="vehiclemodel">Vehicle model</string>
    <string name="status">Status</string>
    <string name="Vehicles">Vehicles</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="orders">Orders</string>
    <string name="rating">Rating</string>
    <string name="financial_data">Financial data</string>
    <string name="address_and_contact">Address</string>
    <string name="order_data">Order data</string>
    <string name="order_date">Order date</string>
    <string name="accept">Accept</string>
    <string name="delivery_time">Delivery time</string>
    <string name="receipt_time">Receipt time</string>
    <string name="order_type">Order Type</string>
    <string name="packaging_type">Packaging Type</string>
    <string name="order_weight">Order Weight</string>
    <string name="order_description">Order Description</string>
    <string name="provider_data">Provider data</string>
    <string name="city">City</string>
    <string name="order_cost">Order Cost</string>
    <string name="address">Address</string>
    <string name="sr">SR</string>
    <string name="delivery">Delivery</string>
    <string name="payment_method">Payment method</string>
    <string name="the_currency">The Currency</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="order_status">Order Status</string>
    <string name="under_review">Under review</string>
    <string name="in_review">inReview </string>
    <string name="delivered">delivered </string>
    <string name="customer_data">Customer Data</string>
    <string name="google_maps_key">AIzaSyAlRxMCvdl5ipOLuyTiof8c6B-Zvg11eHo</string>
    <string name="the_distance_of_shortest_route">The distance of shortest route</string>
    <string name="nav_home">Home </string>
    <string name="nav_orders">Orders </string>
    <string name="nav_payments">Payments </string>
    <string name="nav_cars">Cars </string>
    <string name="nav_services">Services </string>
    <string name="nav_chats">Chats </string>
    <string name="nav_profile">Profile </string>
    <string name="nav_more">More </string>
    <string name="nav_sign_out">Sign Out </string>
    <string name="main_drawer_open">open_drawer</string>
    <string name="main_drawer_close">close_drawer</string>
    <string name="Underreview"> review</string>
    <string name="Underway">Underway</string>
    <string name="precedent">previous</string>
    <string name="Reference">Reference</string>
    <string name="orderhistory">Order date</string>
    <string name="timeofreceipt">Time receipt</string>
    <string name="deliverytime">Delivery time</string>
    <string name="ordertype">Order type</string>
    <string name="acceptance">Accept</string>
    <string name="details"> Details</string>
    <string name="refusal">Refusal</string>
    <string name="deliveryprice">Delivery price</string>
    <string name="sent_deliveredd">sent delivered</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="more">More</string>
    <string name="payment">payment</string>
    <string name="thebaseorderprice">The base order price</string>
    <string name="delivery_price">Delivery price</string>
    <string name="status_order">Status order</string>
    <string name="click_to_view_payment_details">Click to view payment details</string>
    <string name="payment_details">payment details</string>
    <string name="from">From</string>
    <string name="to_me">to me</string>
    <string name="the_cost_of_the_base_order">The cost of the base order</string>
    <string name="delivery_commission">Delivery commission</string>
    <string name="contact_provider">Contact provider</string>
    <string name="email_provider">Email provider</string>
    <string name="contact_customer">Contact customer</string>
    <string name="email_customer">Email customer</string>
    <string name="servises">services</string>
    <string name="addservice">add service</string>
    <string name="fromcity">from city</string>
    <string name="toacity">To a city</string>
    <string name="allowable_weight">Allowable Weight</string>
    <string name="price">Price</string>
    <string name="overweight">Overweight</string>
    <string name="excess_weight_price">Excess weight price</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="the_license_was_not_uploaded">The license was not uploaded</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="call_us">Contact us</string>
    <string name="title_of_the_topic">Title of the topic</string>
    <string name="about_the_app">About</string>
    <string name="send">Send</string>
    <string name="messages">Messages</string>
    <string name="privacy_policy"> Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="type_message" tools:ignore="TypographyEllipsis">Type message ...</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="Noevaluation">"No evaluation "</string>
</resources>