<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.foodella.driver.features.main.payments.adapter.PaymentItemViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_card_fill_white"
        android:layout_height="wrap_content">

        <com.foodella.driver.features.orderDetails.FieldView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fv_txt_label="@string/orderhistory"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:fv_icon="@drawable/ic_baseline_date_range_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:text="@{viewModel.orderDate}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.foodella.driver.features.orderDetails.FieldView
            android:id="@+id/txt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:fv_txt_label="@string/thebaseorderprice"
            android:layout_marginTop="16dp"
            app:fv_icon="@drawable/ic_money"
            app:text="@{viewModel.orderPrice}"
            app:layout_constraintEnd_toEndOf="@id/txt1"
            app:layout_constraintStart_toStartOf="@id/txt1"
            app:layout_constraintTop_toBottomOf="@id/txt1" />

        <com.foodella.driver.features.orderDetails.FieldView
            android:id="@+id/txt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:fv_txt_label="@string/delivery_price"
            android:layout_marginTop="16dp"
            app:fv_icon="@drawable/ic_motorcycle"
            app:text="@{viewModel.deliveryPrice}"
            app:layout_constraintEnd_toEndOf="@id/txt1"
            app:layout_constraintStart_toStartOf="@id/txt1"
            app:layout_constraintTop_toBottomOf="@id/txt2" />

        <com.foodella.driver.features.orderDetails.FieldView
            android:id="@+id/txt4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:fv_txt_label="@string/status_order"
            android:layout_marginTop="16dp"
            app:fv_icon="@drawable/ic_bookmark_24"
            app:text="@{viewModel.orderStatus}"
            app:layout_constraintEnd_toEndOf="@id/txt1"
            app:layout_constraintStart_toStartOf="@id/txt1"
            app:layout_constraintTop_toBottomOf="@id/txt3" />

        <TextView
            android:id="@+id/goPaymetActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/click_to_view_payment_details"
            app:layout_constraintEnd_toEndOf="@+id/txt4"
            app:layout_constraintStart_toStartOf="@+id/txt4"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{v -> viewModel.onClickPaymentActivity()}"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/txt4" />
        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintTop_toBottomOf="@+id/goPaymetActivity"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>