<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_dialog_window"
    android:paddingBottom="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttContact"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:backgroundTint="@color/ef_white"
            android:text="@string/contact_provider"
            android:textColor="@color/colorGreen"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/colorGreen"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but2"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ef_white"
            android:text="@string/email_provider"
            android:textColor="@color/colorOrange"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@id/buttContact"
            app:layout_constraintStart_toStartOf="@id/buttContact"
            app:layout_constraintTop_toBottomOf="@id/buttContact"
            app:strokeColor="@color/colorOrange"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttContactClent"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ef_white"
            android:text="@string/contact_customer"
            android:textColor="@color/colorGreen"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/but2"
            app:strokeColor="@color/colorGreen"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/butFinal"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ef_white"
            android:text="@string/email_customer"
            android:textColor="@color/colorOrange"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@id/buttContact"
            app:layout_constraintStart_toStartOf="@id/buttContact"
            app:layout_constraintTop_toBottomOf="@id/buttContactClent"
            app:strokeColor="@color/colorOrange"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>