<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.foodella.driver.bottomSheets.languageBottomSheet.LanguageViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_sheet_shape"
            app:bottomSheetState="@{viewModel.bottomSheetState}"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <TextView
                android:id="@+id/select_lang_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/please_choose_the_application_language"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/arabic_lang_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:onClick="@{v -> viewModel.onClickArabicLanguage()}"
                android:text="@string/arabic"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkGray"
                android:textSize="16sp"
                android:textStyle="normal"
                app:changeBackground="@{viewModel.isArabicClicked}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_lang_tv" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/english_lang_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:onClick="@{v -> viewModel.onClickEnglishLanguage()}"
                android:text="@string/english_language"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkGray"
                android:textSize="16sp"
                android:textStyle="normal"
                app:changeBackground="@{viewModel.isEnglishClicked}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/arabic_lang_btn" />

            <Button
                android:id="@+id/loginBtn"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:enabled="@{viewModel.isLanguageSelected}"
                android:gravity="center"
                android:onClick="@{v -> viewModel.onClickOk()}"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircleRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/english_lang_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>